--- a/src/style/HomePage.scss
+++ b/src/style/HomePage.scss
@@ -293,6 +293,35 @@
 
 
     }
+    &.homepage {
+        .list-wrap {
+            ul {
+                li {
+                    .folder-img {
+                        background-image: url('../../public//images/bar-ilan-logo.png');
+                        background-size: contain;
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        width: 100%;
+                        height: 6rem;
+                        @include breakpoint(desktop-sm) {
+                            height: 5rem;
+                        }
+                        @include breakpoint(mobile) {
+                            height: 4rem;
+                        }
+                    }
+                
+                    &.item {
+                        width: 20rem;
+                        @include breakpoint(mobile) {
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 .video-grid {
     .video-item {
