--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -9,64 +9,59 @@ footer {
     right: 0;
     width: 100%;
     background-color: $green;
-    height: 20rem;
+    height: 4rem;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    @include breakpoint(desktop-sm) {
-        height: 16rem;
-    }
-    @include breakpoint(mobile) {
-        height: 14rem;
-    }
-    .footer-bg {
-        background-image: url(../../public/images/footer-bg.webp);
-        background-repeat: no-repeat;
-        position: absolute;
-        bottom: 0;
-        filter: brightness(0) invert(1);
-        left: 0;
-        width: 24.1rem;
-        height: 26rem;
-        @include breakpoint(desktop-sm) {
-            height: 20rem;
-        }
-        @include breakpoint(mobile) {
-            width: 10.1rem;
-            height: 11rem;
-        }
-    }
+    // .footer-bg {
+    //     // background-image: url(../../public/images/footer-bg.webp);
+    //     background-repeat: no-repeat;
+    //     position: absolute;
+    //     bottom: 0;
+    //     filter: brightness(0) invert(1);
+    //     left: 0;
+    //     width: 24.1rem;
+    //     height: 26rem;
+    //     @include breakpoint(desktop-sm) {
+    //         height: 20rem;
+    //     }
+    //     @include breakpoint(mobile) {
+    //         width: 10.1rem;
+    //         height: 11rem;
+    //     }
+    // }
     .inner {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         height: 100%;
         text-align: center;
         color: $text-light;
-        .logo {
-            width: 21rem;
-            height: 10rem;
-            margin-top: 4rem;
-            @include breakpoint(desktop-sm) {
-                width: 16rem;
-                height: 7rem;
-                margin-top: 3rem;
-            }
-            @include breakpoint(mobile) {
-                width: 13rem;
-                height: 5rem;
-            }
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-                filter: brightness(0) invert(1);
-            }
-        }
+        // .logo {
+        //     width: 21rem;
+        //     height: 10rem;
+        //     margin-top: 4rem;
+        //     @include breakpoint(desktop-sm) {
+        //         width: 16rem;
+        //         height: 7rem;
+        //         margin-top: 3rem;
+        //     }
+        //     @include breakpoint(mobile) {
+        //         width: 13rem;
+        //         height: 5rem;
+        //     }
+        //     img {
+        //         width: 100%;
+        //         height: 100%;
+        //         object-fit: contain;
+        //         filter: brightness(0) invert(1);
+        //     }
+        // }
         >p {
             margin: 0 auto 1rem;
             font-size: 1.4rem;
+            margin: 0;
         }
     }
 }
