--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -24,8 +24,8 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 4rem);
     padding: 4rem 8rem;
+    height: auto;
 }
 button {
     box-shadow: 0 2px 10px 3px rgba(0, 0, 0, 0.25);
